<resources>
    <string name="google_maps_v2_api_key">AIzaSyDzN299UGIvDC4usUuCyrMgVemF322xwZk</string>
    <string name="preference_key_my_profile_picture">PREF_PROFILE_IMAGE</string>
    <string name="preference_key_my_profile_first_name">PREF_PROFILE_FIRST_NAME</string>
    <string name="preference_key_my_profile_last_name">PREF_PROFILE_LAST_NAME</string>
    <string name="preference_key_my_profile_email">PREF_PROFILE_EMAIL</string>
    <string name="preference_key_my_profile_address">PREF_PROFILE_ADDRESS</string>
	<string name="preference_key_my_profile_phone_number">PREF_PROFILE_PHONE_NUMBER</string>
	<string name="push_notification_title">מבצע החודש</string>
	<string name="push_notification_message">"חברת פיקצ'ר איט יוצאת במבצעים חסרי תקדים ללקוחות חדשים!"</string>
    <string name="question_mark">"?"</string>
    <string name="press_again_to_exit">לחץ פעם נוספת ליציאה</string>
    <string name="loading">טוען..</string>
    <string name="select_address">בחר כתובת</string>
    <string name="edit">ערוך</string>
    <string name="character_next">&lt;</string>
    <string name="beautician_around_you">קוסמטיקאיות בסביבתך</string>
    <string name="app_name">Beauty App</string>
    <string name="title_settings">הגדרות</string>
    <string name="title_history">היסטוריית טיפולים</string>
    <string name="title_future_treatments">טיפולים</string>
    <string name="title_service_order">הזמנת טיפול</string>
    <string name="title_terms_of_service">תנאי שימוש</string>
    <string name="title_order_notification">הודעות</string>
    <string name="title_my_profile">פרופיל אישי</string>
    <string name="title_edit_my_profile">עריכת פרופיל</string>
    <string name="settings_preference_category_title_distance">Distance</string>
    <string name="settings_preference_title_radius">Radius</string>
    <string name="settings_preference_summary_radius">Change search radius</string>
    <string name="settings_preference_category_title_personal_details">פרטים אישיים</string>
    <string name="settings_preference_title_first_name">שם פרטי</string>
    <string name="settings_preference_title_last_name">שם משפחה</string>
    <string name="settings_preference_title_email">אי מייל</string>
    <string name="settings_preference_title_address">כתובת</string>
    <string name="action_pending_orders">הודעות</string>
    <string name="action_my_profile">פרופיל אישי</string>
    <string name="action_history">היסטוריית טיפולים</string>
    <string name="action_explanation">הסבר</string>
    <string name="action_terms_of_service">תקנון</string>
    <string name="action_ask_for_service">הזמן טיפול</string>
    <string name="action_search_providers">חפש קוסמטיקאית</string>
    <string name="action_future_treatments">הטיפולים הבאים</string>
    <string name="pending_order_dialog_message">בקשה נשלחה</string>
    <string name="pending_order_dialog_button_wait">המתן</string>
    <string name="pending_order_dialog_button_abort">בטל</string>
    <string name="pending_order_toast">לא ניתן לבצע פעולה זו הזמן המתנה לתשובה מבקשת טיפול!</string>
    <string name="register"><b>רישום</b></string>
    <string name="tell_us_who_you_are">ספרו לנו מי אתם</string>
    <string name="invalid_email">מייל לא תקין</string>
    <string name="telephone_number">מספר טלפון</string>
    <string name="first_name">שם פרטי:</string>
    <string name="last_name">שם משפחה:</string>
    <string name="email">מייל:</string>
    <string name="address">כתובת:</string>
    <string name="proceed">המשך</string>
    <string name="you_must_fill_all_fields">חובה למלא את כל השדות</string>
    <string name="phone_number_confirmation">אימות מספר טלפון</string>
    <string name="phone_number_confirmation_code">הקלדת קוד רישום</string>
    <string name="phone_number_confirmation_explanation">הקלד את מספר הטלפון שלך ולחץ המשך.\nהודעה המכילה קוד תישלח למכשירך.\nהקלד את המספר במסך הבא.</string>
    <string name="phone_number_confirmation_code_explanation">הקלידו את הקוד שקיבלתם במסרון</string>
    <string name="one_of_three"><b>1/3</b></string>
    <string name="two_of_three"><b>2/3</b></string>
    <string name="three_of_three"><b>3/3</b></string>
    <string name="code_expaired">פג תוקפו של הקוד. בקש קוד חדש</string>
    <string name="code_expaired_send_new_one">שלח קוד אימות חדש</string>
    <string name="invalid_phone_verification_code">קוד שגוי.\nנסה שוב</string>
    <string name="failed_on_re_sending_code">שליחה נכשלה. נסה שוב במועד מאוחר יותר</string>
    <string name="time_left_to_type_code">זמן להקלדת קוד:</string>
    <string name="code_resended">הצליח! תקבל הודעה ברגעים הקרובים</string>
    <string name="dialog_error_message_all_feilds_are_empty">לפחות אחד השדות חייב להיות מלא</string>
    <string name="dialog_error_message_must_fill_all_feilde">על כל השדות להיות מלאים</string>
    <string name="dialog_title_error">תקלה</string>
    <string name="dialog_messege_server_error">יש לנו בעית התקשרות.. אנו עובדים על פתרון</string>
    <string name="dialog_messege_no_location">לא ניתן להמשיך. מיקומך המדוייק לא אותר</string>
    <string name="dialog_messege_please_wait">אנא המתן..</string>
    <string name="main_screen_slider_empty_dialog_title">אין תוצאות</string>
    <string name="main_screen_slider_empty_dialog_messege_no_pins_on_screen">לא נמצאו קוסמטיקאיות בסביבה הקרובה</string>
    <string name="beautician_page_title">קוסמטיקאית</string>
    <string name="beautician_page_raters">מדרגים</string>
    <string name="arrival_at_the_customers_home">הגעה לבית הלקוח:</string>
    <string name="yes">כן</string>
    <string name="no">לא</string>
    <string name="beautician_degrees">תארים של הקוסמטיקאית</string>
    <string name="no_beautician_description">אין תיאור נרחב</string>
    <string name="diplomas">תעודות</string>
    <string name="no_diplomas">אין תעודות</string>
    <string name="treatments">טיפולים</string>
    <string name="confirm">אשר</string>
    <string name="reject">דחה</string>
	<string name="call_to">התקשר ל</string>
	<string name="price">מחיר:</string>
	<string name="no_treatments">לא הוזמנו טיפולים</string>
	<string name="and_more">ועוד</string>
	<string name="additional">נוספים</string>
	<string name="when">מתי:</string>
	<string name="wanted_treatment">טיפול מבוקש:</string>
	<string name="location">מיקום:</string>
	<string name="remarks">הערות:</string>
	<string name="remarks_empty">אין הערות</string>
   	<string name="search_provider_title">חיפוש קוסמטיקאיות</string>
    <string name="search_provider_search_by">חפש לפי:</string>
    <string name="search_provider_search_by_name">שם</string>
    <string name="search_provider_search_by_location">עיר</string>
    <string name="search_provider_search_by_type">סיווג</string>
    <string name="search_provider_search_by_services_type">סוג שירות</string>
    <string name="search_provider_search">חפש</string>
    <string name="search_provider_error_dialog_title">תקלה</string>
    <string name="search_provider_error_dialog_no_results">אין תוצאות שתאמו לחיפושך</string>
    <string name="service_for">עבור:</string>
    <string name="who_the_service_for">עבור מי הטיפול</string>
    <string name="service_when">מתי:</string>
    <string name="when_the_service_happen">מתי הטיפול</string>
    <string name="select_treatment">בחר טיפול</string>
    <string name="service_select_treatment">טיפול:</string>
    <string name="service_location">מיקום:</string>
    <string name="select_location">בחר מיקום</string>
    <string name="service_remarks">הערות:</string>
    <string name="service_order_one">הזמן</string>
    <string name="bullet"><b>&#183;</b></string>
    <string name="date">תאריך:</string>
    <string name="beautician">קוסמטיקאית:</string>
    <string name="treatment">טיפול:</string>
	<string name="rate">דרג</string>
	<string name="reorder">הזמן שוב</string>
    <string name="dialog_ok_text">סבבה</string>
    <string name="dialog_cancel_text">ביטול</string>
    <string name="else_">אחר</string>
    <string name="dialog_title_for">עבור</string>
    <string name="for_me">עבורי</string>
    <string name="for_group">קבוצה</string>
    <string-array name="for_who_array">
        <item>@string/for_me</item>
        <item>@string/for_group</item>
        <item>@string/else_</item>
    </string-array>
	<string name="dialog_title_location">כתובת</string>
	<string name="at_my_home">בביתי</string>
	<string name="at_the_beautician">אצל הקוסמטיקאית</string>
	    <string-array name="dialog_location_array">
        <item>@string/at_my_home</item>
        <item>@string/at_the_beautician</item>
        <item>@string/else_</item>
    </string-array>
    <string name="dialog_title_remarks">היערות</string>
    <string name="dialog_title_select_treatment">בחר טיפול</string>
    <string name="dialog_subtitle_select_treatment">בחר סוג טיפול - ניתן לבחור יותר מאחד</string>
    <string-array name="treatment_1">
        <item name="id">1</item>
        <item name="title">פדיקור</item>
        <item name="description">טיפול בכפות הרגליים. הטיפול בדרך כלל כולל השריית הרגליים
במים, הסרת עור יבש מכף הרגל, גזירת ציפורניים והעור מסביב 
לציפורניים, עיסוי פילינג לכפות הרגליים, עיסוי כפות הרגליים 
בקרם רגליים מזין ומריחת לק לפי בקשת לקוחה. הטיפול כולל 
גם טיפול בבעיות כף הרגל השונות כגון טיפול ביבלות, ציפורן 
חודרנית, פטרת, יבלות, עור סדוק וכיו"ב. אוכלוסיות מסויימות 
זקוקות לטיפול באופן תכוף יותר כגון סכרתיים.</item>
        <item name="price">80&#8211;180</item>
    </string-array>
    <string-array name="treatment_2">
        <item name="id">2</item>
        <item name="title">מניקור</item>
        <item name="description">טיפול אסטטי לציפורניים בידיים. לרוב כולל הטיפול גם פילינג
ועיסוי לכף היד. כולל מריחת לק לפי בקשת הלקוחה.</item>
        <item name="price">45&#8211;100</item>
    </string-array>
    <string-array name="treatment_3">
        <item name="id">3</item>
        <item name="title">בניית ציפורניים</item>
        <item name="description">"מספר שיטות: אקריל (בניית ציפורן באמצעות אבקת ונוזל אקריל בעזרת מכחול), טבילה (לאחר סידור הציפורן ומריחת שכבת דבק נטבלת הציפורן באבקת משי אקריל), ג'ל (מריחת ג'ל על הציפורן בעזרת מכחול וייבוש במנורת אולטרא ויולט). אחת ל-3 שבועות יש לתחזק את הבנייה באמצעות מילוי אצל בונת הציפורניים"</item>
        <item name="price">180&#8211;230</item>
    </string-array>
    <string-array name="treatment_4">
        <item name="id">4</item>
        <item name="title">מילוי בנייה</item>
        <item name="description">תהליך תחזוקת בניית הציפורניים. יש לבצע מילוי הציפורניים
אחת ל-2&#8211;3 שבועות אצל בונות הציפורניים.</item>
        <item name="price">&#8211;</item>
    </string-array>
    <string-array name="treatment_5">
        <item name="id">5</item>
        <item name="title">"לק ג'ל"</item>
        <item name="description">"מריחת לק עשוי מג'ל אשר מחזיק מעמד כ&#8211;3 שבועות."</item>
        <item name="price">90&#8211;170</item>
    </string-array>
    <string-array name="treatment_6">
        <item name="id">6</item>
        <item name="title">טיפול יופי</item>
        <item name="description">טיפול פנים קצר. אינו כולל ניקוי עמוק של הפנים. משך הטיפול
כחצי שעה.</item>
        <item name="price">120&#8211;220</item>
    </string-array>
    <string-array name="treatment_7">
        <item name="id">7</item>
        <item name="title">טיפול פנים</item>
        <item name="description">טיפול פנים סטנדרטי כולל ניקוי עדין של הפנים באמצעות
התכשירים המתאימים, ריכוך עור הפנים, ניקוי עור הפנים 
בפילינג, עיסוי קל של הפנים ולבסוף מסיכה להזנת העור. משך 
טיפול פנים סטנדרטי שעה&#8211;שעה וחצי.</item>
        <item name="price">200&#8211;400</item>
    </string-array>
    <string-array name="treatment_8">
        <item name="id">8</item>
        <item name="title">שעוות רגל שלמה</item>
        <item name="description"></item>
        <item name="price">70&#8211;150</item>
    </string-array>
</resources>