<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.noambaroz.com/beutyapp" >

    <utilities.view.PreferenceImageView
        android:key="@string/preference_key_my_profile_picture"
        myapp:gravity="17"
        myapp:src="@drawable/ic_launcher" />

    <EditTextPreference
        android:key="@string/preference_key_my_profile_first_name"
        android:title="@string/settings_preference_title_first_name" />
    <EditTextPreference
        android:key="@string/preference_key_my_profile_last_name"
        android:title="@string/settings_preference_title_last_name" />
    <EditTextPreference
        android:key="@string/preference_key_my_profile_email"
        android:title="@string/settings_preference_title_email" />
    <EditTextPreference
        android:key="@string/preference_key_my_profile_address"
        android:title="@string/settings_preference_title_address" />

</PreferenceScreen>