<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <utilities.view.AutoResizeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dedede"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/search_provider_title"
        android:textSize="24sp" />

    <utilities.view.AutoResizeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dedede"
        android:padding="7dp"
        android:text="@string/search_provider_search_by" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" >

        <CheckBox
            android:id="@+id/cb_search_provider_search_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <EditText
            android:id="@+id/et_search_provider_search_by_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cb_search_provider_search_by_name"
            android:hint="@string/search_provider_search_by_name"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_search_provider_search_by_location"
            android:padding="7dp"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" >

        <CheckBox
            android:id="@+id/cb_search_provider_search_by_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <AutoCompleteTextView
            android:id="@+id/et_search_provider_search_by_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cb_search_provider_search_by_location"
            android:hint="@string/search_provider_search_by_location"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_search_provider_search_by_type"
            android:padding="7dp"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" >

        <CheckBox
            android:id="@+id/cb_search_provider_search_by_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <EditText
            android:id="@+id/et_search_provider_search_by_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cb_search_provider_search_by_type"
            android:hint="@string/search_provider_search_by_type"
            android:imeOptions="actionNext"
            android:nextFocusDown="@+id/et_search_provider_search_by_services_type"
            android:padding="7dp"
            android:singleLine="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="7dp"
        android:paddingRight="7dp" >

        <CheckBox
            android:id="@+id/cb_search_provider_search_by_services_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <EditText
            android:id="@+id/et_search_provider_search_by_services_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/cb_search_provider_search_by_services_type"
            android:hint="@string/search_provider_search_by_services_type"
            android:imeOptions="actionDone"
            android:padding="7dp"
            android:singleLine="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_search_provider_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="7dp"
        android:background="@drawable/gray_button_shape"
        android:gravity="center"
        android:text="@string/search_provider_search" />

</LinearLayout>