<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:orientation="vertical" >

        <utilities.view.MyFontTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_row_height"
            android:background="@color/app_most_common_yellow_color"
            android:gravity="center"
            android:text="@string/pending_order_dialog_message"
            android:textColor="@color/app_background"
            android:textSize="@dimen/common_title_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_row_height"
            android:orientation="horizontal" >

            <utilities.view.MyFontTextView
                android:id="@+id/pending_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/registration_btn_shape"
                android:gravity="center"
                android:text="@string/pending_order_dialog_button_abort"
                android:textColor="@color/app_background"
                android:textSize="@dimen/common_text_size" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/pending_dialog_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/app_logo" />
            </FrameLayout>

            <utilities.view.MyFontTextView
                android:id="@+id/pending_dialog_wait"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pending_order_dialog_button_wait"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>